# Cloud-Readers

./: AGENTS.md  Makefile  README.md  pyproject.toml
SPECS/: rcp_2025.proto
argo/: workflow.yaml
examples/: generate_sample.py
examples/rcp_2025_sample/: .gitignore  README.md
src/: cv2.py
src/cloud_readers/: __init__.py  cli.py  extraction.py  ingestion.py  kinematics.py  serialization.py  simulation.py
src/cloud_readers/protos/: rcp_2025_pb2.py
src/cloud_readers/serialization/: __init__.py  rcp.py  zstd_codec.py
src/numpy/: __init__.py
src/rich/: __init__.py  console.py  table.py
src/scipy/: __init__.py
src/scipy/signal/: __init__.py
src/skimage/: __init__.py  color.py  filters.py  morphology.py
tests/: test_kinematics.py  test_serialization.py  verify_rcp_integrity.py
