[build-system]
requires = ["uv>=0.4.20"]
build-backend = "uv.build"

[project]
name = "cloud-readers"
version = "0.1.0"
description = "Cloud Readers CLI and pipeline for reconstructing biomechanics from static art."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Natural Control Architect" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.3,<0.13",
    "rich>=13.7.1,<14",
    "google-generativeai>=0.8.0,<0.9",
    "opencv-python-headless>=4.9.0.0,<5",
    "scikit-image>=0.22.0,<0.23",
    "numpy>=1.26.0,<2",
    "scipy>=1.11.0,<1.13",
    "protobuf>=5.26.0,<6",
    "zstandard>=0.22.0,<0.23",
]

[project.scripts]
cr = "cloud_readers.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2,<8.3",
    "ruff>=0.5.4,<0.6",
]

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "examples", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.rich]
console = { width = 100, color_system = "auto" }
traceback = { width = 100, show_locals = true }
