[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cloud-readers"
version = "0.1.0"
description = "Cloud Readers CLI and pipeline for reconstructing biomechanics from static art."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Natural Control Architect" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0,<0.13",
    "click>=8.1,<8.2",
    "rich>=13.8.0,<14",
    "google-generativeai>=0.8.0,<0.9",
    "opencv-python-headless>=4.10.0,<5",
    "scikit-image>=0.24.0,<0.25",
    "numpy>=2.1.0,<3",
    "scipy>=1.14.0,<1.15",
    "protobuf>=5.28.0,<6",
    "zstandard>=0.23.0,<0.24",
]

[project.scripts]
cr = "cloud_readers.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "ruff>=0.6.8,<0.7",
]

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "examples", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.rich]
console = { width = 100, color_system = "auto" }
traceback = { width = 100, show_locals = true }
